--- a/HBWebApiToken/appsettings.json
+++ b/HBWebApiToken/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Data Source=BURAKS-PC\\SQLEXPRESS;Initial Catalog=HBWebApiToken;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DevConnection": "Data Source=BURAKS_PC\\SQLEXPRESS;;Initial Catalog=HBWebApiToken;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Token": {
     "Key": "super secret token key",
